<resources>
    <string name="app_name">RobotCarPhoneApplication</string>
    <string name="start_driving_text">Start Driving</string>
    <string name="select_drive_mode_text">Select Drive Mode</string>
    <string name="select_camera_control_mode_text">Select Camera Control Mode</string>
    <string name="drive_by_touch_text">Drive By Touch</string>
    <string name="drive_by_button_text">Drive By Button</string>
    <string name="control_camera_by_button_text">Control Camera By Button</string>
    <string name="control_camera_by_touch_text">Control Camera By Touch</string>

    <string name="forward_text">Forward</string>
    <string name="reverse_text">Reverse</string>
    <string name="up_text">Up</string>
    <string name="down_text">Down</string>
    <string name="right_text">Right</string>
    <string name="left_text">Left</string>
    <string name="title_activity_driving">DrivingActivity</string>

    <string name="no_driving_style_selected_text">No Driving Style Selected</string>
    <string name="no_camera_control_style_selected_text">No Camera Control Style Selected</string>

    <string name="take_picture">Take a Picture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
