<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/forward_button"
        android:text="@string/forward_text"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/left_button"
            android:text="@string/left_text"/>

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/right_button"
            android:text="@string/right_text"/>

    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/reverse_button"
        android:text="@string/reverse_text"/>

</LinearLayout>